[gd_scene load_steps=5 format=3 uid="uid://dngta4t20csb5"]

[ext_resource type="Script" path="res://scenes/Microgames/defendtheflag/scripts/space_ship.gd" id="1_ee0qp"]
[ext_resource type="Texture2D" uid="uid://yo0pm3exlkqb" path="res://scenes/Microgames/defendtheflag/assets/Spaceship.png" id="1_pdc11"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m8mx6"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2xliw"]
radius = 7.07107

[node name="SpaceShip" type="CharacterBody2D"]
script = ExtResource("1_ee0qp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_pdc11")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_m8mx6")
disabled = true

[node name="LaserCooldownTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_2xliw")

[connection signal="timeout" from="LaserCooldownTimer" to="." method="_on_laser_cooldown_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
